--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,8 @@ dist
 
 # TernJS port file
 .tern-port
+
+# for vite-plugin-web-components-hmr
+packages/dev-server-hmr/src/**
+!packages/dev-server-hmr/src/hmrPlugin.js
+scripts/open-wc.zip
