--- a/.gitignore
+++ b/.gitignore
@@ -104,8 +104,8 @@ dist
 .tern-port
 
 # for vite-plugin-web-components-hmr
+scripts/open-wc.zip
+# sync with `scripts/clone.mts`
 packages/dev-server-hmr/src/**
-packages/dev-server-hmr/index.d.ts
 packages/dev-server-hmr/index.mjs
 !packages/dev-server-hmr/src/hmrPlugin.js
-scripts/open-wc.zip
