feat: add Babel import attributes

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/core": "^7.12.3",
     "@babel/plugin-syntax-class-properties": "^7.12.13",
     "@babel/plugin-syntax-import-assertions": "^7.12.1",
+    "@babel/plugin-syntax-import-attributes": "^7.23.3",
     "@babel/plugin-syntax-top-level-await": "^7.12.1",
     "micromatch": "^4.0.5",
     "picomatch": "^2.2.2"
